// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal close button 1`] = `
<blaze-modal
  class="hydrated"
  dismissible=""
  open=""
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage c-overlay--visible"
  />
  <div
    class="o-modal o-modal--visible"
    role="dialog"
  >
    <button
      class="c-button c-button--close"
      type="button"
    >
      ×
    </button>
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal close button 2`] = `
<blaze-modal
  class="hydrated"
  dismissible=""
  open=""
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage"
  />
  <div
    class="o-modal"
    role="dialog"
  >
    <button
      class="c-button c-button--close"
      type="button"
    >
      ×
    </button>
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal close by clicking overlay 1`] = `
<blaze-modal
  class="hydrated"
  dismissible=""
  open=""
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage c-overlay--visible"
  />
  <div
    class="o-modal o-modal--visible"
    role="dialog"
  >
    <button
      class="c-button c-button--close"
      type="button"
    >
      ×
    </button>
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal close by clicking overlay 2`] = `
<blaze-modal
  class="hydrated"
  dismissible=""
  open=""
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage"
  />
  <div
    class="o-modal"
    role="dialog"
  >
    <button
      class="c-button c-button--close"
      type="button"
    >
      ×
    </button>
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal close modal method 1`] = `
<blaze-modal
  class="hydrated"
  open=""
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage c-overlay--visible"
  />
  <div
    class="o-modal o-modal--visible"
    role="dialog"
  >
    
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal close modal method 2`] = `
<blaze-modal
  class="hydrated"
  open=""
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage"
  />
  <div
    class="o-modal"
    role="dialog"
  >
    
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal renders as open 1`] = `
<blaze-modal
  class="hydrated"
  open=""
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage c-overlay--visible"
  />
  <div
    class="o-modal o-modal--visible"
    role="dialog"
  >
    
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal renders correctly with no props 1`] = `
<blaze-modal
  class="hydrated"
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage"
  />
  <div
    class="o-modal"
    role="dialog"
  >
    
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal renders dismissible button and overlay 1`] = `
<blaze-modal
  class="hydrated"
  dismissible=""
  open=""
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage c-overlay--visible"
  />
  <div
    class="o-modal o-modal--visible"
    role="dialog"
  >
    <button
      class="c-button c-button--close"
      type="button"
    >
      ×
    </button>
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal show modal method 1`] = `
<blaze-modal
  class="hydrated"
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage"
  />
  <div
    class="o-modal"
    role="dialog"
  >
    
    
    default
  </div>
</blaze-modal>
`;

exports[`Modal show modal method 2`] = `
<blaze-modal
  class="hydrated"
>
  
  
  <div
    aria-hidden=""
    class="c-overlay c-overlay--fullpage c-overlay--visible"
  />
  <div
    class="o-modal o-modal--visible"
    role="dialog"
  >
    
    
    default
  </div>
</blaze-modal>
`;
